<?xml version="1.0"?>
<package format="2">
  <name>snowbot_operating_system</name>
  <version>0.0.1</version>
  <description>The weather outside is frightful</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz</depend>
  <test_depend>roslint</test_depend>
  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>
</package>
