<?xml version="1.0"?>
<package format="2">
  <name>snowbot_operating_system</name>
  <version>0.1.2</version>
  <description>The weather outside is frightful</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
