<?xml version="1.0"?>
<package format="2">
  <name>snowbot_operating_system</name>
  <version>0.0.5</version>
  <description>The weather outside is frightful</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz</depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <test_depend>roslint</test_depend>
  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>
</package>
